# test-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  batch_generate.py  conftest.py  coverage.py  pyproject.toml  pytest.ini  requirements.txt  test_plan.json  uv-tools.sh
agent/: main.py  model.py  workflow.py
agent/prompts/: failure_analysis.md  failure_analyzer.md  generator.md  perf_planner.md  planner.md  reviewer.md  system.md  test_design.md
config/: settings.py
core/: api_client.py  assertion.py  chain_runner.py  coverage.py  db_client.py  failure_collector.py  locust_runner.py  yaml_parser.py  yaml_runner.py
docs/: admin-swagger.json  user-swagger.json
perf/: generated_locustfile.py
perf/scenarios/: core_api.yaml  load_test.yaml  step_load.yaml
testcases/chain/: test_order_flow.yaml
testcases/分类管理/: test_分类管理.yaml
testcases/员工管理/: test_员工管理.yaml
testcases/商品与套餐管理/: test_商品与套餐管理.yaml
testcases/商品浏览/: test_商品浏览.yaml
testcases/商品浏览（c端）/: test_商品浏览（c端）.yaml
testcases/地址簿管理/: test_地址簿管理.yaml
testcases/套餐管理/: test_套餐管理.yaml
testcases/工作台/: test_工作台.yaml
testcases/工作台(后台)/: test_工作台(后台).yaml
testcases/店铺状态查询/: test_店铺状态查询.yaml
testcases/店铺管理/: test_店铺管理.yaml
testcases/报表与工作台/: test_报表与工作台.yaml
testcases/报表统计/: test_报表统计.yaml
testcases/数据统计(后台)/: test_数据统计(后台).yaml
testcases/用户与地址管理/: test_用户与地址管理.yaml
testcases/用户与认证管理/: test_用户与认证管理.yaml
tools/: __init__.py  api_tool.py  coverage_tool.py  data_tool.py  db_tool.py  doc_tool.py  failure_tool.py  perf_tool.py  report_tool.py  runner_tool.py
utils/: logger.py
(+18 files in other folders)
