[project]
name = "test-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "allure-pytest>=2.16.0",
    "faker>=40.15.0",
    "jsonpath-ng>=1.8.0",
    "loguru>=0.7.3",
    "openai-agents>=0.17.0",
    "pymysql>=1.1.3",
    "pytest>=9.0.3",
    "pytest-html>=4.2.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
]
